Services and Swagger Done
